--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
 #root {
   margin: 0 auto;
   text-align: center;
+  font-family: 'Poppins', sans-serif;
 }
 
 .logo {
