--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -6,7 +6,7 @@
     width: 100%;
     backdrop-filter: blur(4px) saturate(43%);
     -webkit-backdrop-filter: blur(4px) saturate(43%);
-    background-color: rgba(197, 252, 178, 0.43);
+    background-color: #1FC5A8;
     border: 1px solid rgba(209, 213, 219, 0.3);
 }
 
