--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -48,6 +48,12 @@
     transform: scaleX(0);
     transition: transform 250ms ease-in;
   }
+  .nav-links:hover{
+    background-color: black;
+    color: white;
+    border-radius: 3px;
+    padding: 0px 2px;
+  }
   .nav-links:hover::after {
     transform: scaleX(1);
     transform-origin: left;
@@ -57,6 +63,7 @@
   @media screen and (min-width: 200px) and (max-width: 1025px) {
     .hamburger {
       display: block;
+      cursor: pointer;
     }
     .close {
       display: block;
