--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -6,7 +6,7 @@
     width: 100%;
     backdrop-filter: blur(4px) saturate(43%);
     -webkit-backdrop-filter: blur(4px) saturate(43%);
-    background-color: rgba(197, 252, 178, 0.43);
+    background-color: rgba(255, 255, 255, 0.6);
     border: 1px solid rgba(209, 213, 219, 0.3);
 }
 
@@ -46,11 +46,11 @@
     background-color: currentColor;
     transform-origin: right;
     transform: scaleX(0);
-    transition: transform 250ms ease-in;
+    transition: transform 400ms ease-in;
   }
   .nav-links:hover{
-    background-color: black;
-    color: white;
+    /* background-color: black; */
+    color: black;
     border-radius: 3px;
     padding: 0px 2px;
   }
